# mars_ode_collision

./: .gitignore  CMakeLists.txt  manifest.xml  mesh_unmovable.patch
configuration/schema/objects/: box_schema.yaml  capsule_schema.yaml  cylinder_schema.yaml  heightfield_schema.yaml  mesh_schema.yaml  plane_schema.yaml  sphere_schema.yaml
src/: CollisionHandler.cpp  CollisionHandler.hpp  CollisionSpace.cpp  CollisionSpace.hpp  CollisionSpaceLoader.cpp  CollisionSpaceLoader.hpp
src/objects/: Box.cpp  Box.hpp  Capsule.cpp  Capsule.hpp  Cylinder.cpp  Cylinder.hpp  Heightfield.cpp  Heightfield.hpp  Mesh.cpp  Mesh.hpp  ODEInertial.cpp  ODEInertial.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
